NOJIRA 2 minor findbugs patterns
git-svn-id: https://source.sakaiproject.org/svn/emailtemplateservice/trunk@66666 66ffb92e-73f9-0310-93c1-f5514f145a0a